--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span> Moves
+
+			<div class="timer">
+				<i class="fa fa-clock-o"></i> <span> 0</span>
+			</div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -30,56 +34,24 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
+
         </ul>
     </div>
+
+	<div id="open-modal" class="modal-window">
+		<div>
+			<a href="#" title="Close" class="modal-close">Close</a>
+			<h1>Congratulations</h1>
+			<div class="message">
+				<p>You completed the game in <span class="game-time"></span> seconds <br>Your rating is <span class="rating-score"></span></p>
+				<p class="question"><em>Play Again ?</em></p>
+			</div>
+
+			<div class="action">
+				<button class="btn btn-primary">Yes</button> <button class="btn btn-secondary">No</button>
+			</div>
+		</div>
+	</div>
 
     <script src="js/app.js"></script>
 </body>
